# libav-ng

./: Cargo.toml  README.md
examples/: generate_black_square_512x512.rs
src/: avcodec.rs  avdictionary.rs  avformat.rs  avframe.rs  avstream.rs  lib.rs
